--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,11 @@
 <footer class="site-footer">
+  <div class="images">
+  <a href='http://www.alboraya.org/'><img src="{{ "/assets/img/alboraya.webp" | relative_url }}" /></a>
+  <img src="{{ "/assets/img/barraca8.jpeg" | relative_url }}" />
+</div>
     <p class="text">
-        {{ site.footer_text | default: "Powered by <a href='https://jekyllrb.com/'>Jekyll</a> with <a href='https://github.com/sylhare/Type-on-Strap'>Type on Strap</a>" }}</p>
-            <div class="footer-icons">
-                <ul>
-                <!-- Social icons from Font Awesome, if enabled -->
-                {% include icons.html %}
-                </ul>
-            </div>
+    Este obra está bajo una <a href='http://creativecommons.org/licenses/by-nc-sa/4.0/'>licencia de Creative Commons Reconocimiento-NoComercial-CompartirIgual 4.0 Internacional. </a><br>
+        Desarrollado con ♥  sobre <a href='https://jekyllrb.com/'>Jekyll</a>, basado en <a href='https://github.com/sylhare/Type-on-Strap'>Type on Strap</a></p>
 </footer>
 
 
