--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,6 +9,9 @@ layout: default
     <h1> {{ site.header_text | default: "Change <code>header_text</code> in <code>_config.yml</code>"}} </h1>
   </div>
 
-  {% include blog.html %}
-    
+  {% include who_we_are.html %}
+  {% include venue.html %}
+  {% include collaborate.html %}
+  {% include contact_us.html %}
+
 </div>
