--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -23,20 +23,13 @@
 
     <!-- Menu -->
     <ul class="hide">
-        {% assign name_page = "" %}
-
-        {% for page in site.pages %}
-            {% unless page.title == null or page.hide or name_page contains page.title %}
-            <li class="separator"> | </li>
-            <li>
-                <a class="clear" aria-label="{{ page.title }}" title="{{ page.title }}" href="{{ page.url | relative_url }}">
-                    {% if page.icon %} <i class="fa {{ page.icon }}" aria-hidden="true"></i>
-                    {% else %} {{ page.title }} {% endif%}
-                </a>
-            </li>
-            {% endunless %}
-            {% assign name_page = page.title | append: name_page %}
-        {% endfor %}
+        <li><a class="clear" aria-label="Quiénes somos" title="Quiénes somos" href="#who-we-are">Quiénes somos</a></li>
+        <li class="separator"> | </li>
+        <li><a class="clear" aria-label="La barraca" title="La barraca" href="#venue">La barraca</a></li>
+        <li class="separator"> | </li>
+        <li><a class="clear" aria-label="Colabora" title="Colabora" href="#collaborate">Colabora</a></li>
+        <li class="separator"> | </li>
+        <li><a class="clear" aria-label="Contacto" title="Contacto" href="#contact">Contacto</a></li>
     </ul>
 
 	</nav>
