--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -1,6 +1,6 @@
 // Typography
 $font-family-main: 'Source Sans Pro', Helvetica, Arial, sans-serif;
-$font-family-headings: 'Source Sans Pro', Helvetica, Arial, sans-serif;
+$font-family-headings: 'jr', Helvetica, Arial, sans-serif;
 $font-family-logo: 'Source Sans Pro', Helvetica, Arial, sans-serif;
 $font-size: 1.25em;
 
@@ -21,7 +21,7 @@ $sm-break: 576px;
 $x-sm-break: 300px;
 
 // Brand colours
-$theme-color: #337ab7;
+$theme-color: #739c00;
 $brand-color: #fff;
 $background-color: #fff;
 $border-color: rgba(0, 0, 0, 0.1); // rgba recommended if using feature images
@@ -30,7 +30,7 @@ $border-color: rgba(0, 0, 0, 0.1); // rgba recommended if using feature images
 $text-color: #262626;
 $meta: #595959; //lowest gray for accessible color
 $link-color: $theme-color;
-$selection-color: #D4D4D4; // visible when highlighting text
+$selection-color: rgb(148, 187, 84); // visible when highlighting text
 $blockquote-color: #EEF7FA; // $background-color;
 
 // Header
