--- a/_sass/includes/_navbar.scss
+++ b/_sass/includes/_navbar.scss
@@ -36,7 +36,7 @@
 
   .avatar {
     height: 3em;
-    width: 3em;
+    max-width: 3em;
     float: left;
     margin-top: -13px;
     border-radius: 0.2em;
