--- a/_sass/layouts/_posts.scss
+++ b/_sass/layouts/_posts.scss
@@ -9,7 +9,7 @@ article {
   @extend .comments;
 
   header {
-    margin-bottom: 6%;
+    margin-bottom: 2%;
     text-align: center;
   }
 
@@ -42,6 +42,11 @@ footer {
 header {
   h1 {
     margin: 0;
+
+    a:hover {
+      text-decoration: none;
+      color: inherit;
+    }
   }
 }
 
