--- a/_includes/collaborate.html
+++ b/_includes/collaborate.html
@@ -8,7 +8,7 @@
 <p>En El Club de l'Horta ofrecemos la oportunidad de colaborar con nosotros y utilizar nuestro espacio para vuestros proyectos. Si tienes una propuesta o una idea que quieres desarrollar en El Club de l'Horta, envianos un mail a elclubdelhorta@gmail.com o pásate por La Barraca y coméntalo!</p>
 
 <p>Siendo socio de El Club de l'Horta nos ayudas a mantener todo el espacio y los jardines. Además puedes disfrutar de las actividades, talleres, cursos y eventos que se organizan durante todo el año. La cuota anual es de solamente 10 euros.</p>
-<a href='https://49c8324c-d5dd-4fe2-a1e5-9d7a3919fd0c.filesusr.com/ugd/07fb17_27c898b5f02c400895002426607fcee4.pdf' target='_blank' class='button'> Descargar formulario de socio </a>
+<a href="{{ 'assets/formulario_socios_2020.pdf' | relative_url }}" target='_blank' class='button'> Descargar formulario de socio </a>
 </div>
 <section>
 </article>
