Update contact and form

--- a/_includes/contact_us.html
+++ b/_includes/contact_us.html
@@ -7,11 +7,9 @@
 Alboraia, Valencia<br>
 elclubdelhorta@gmail.com<br>
 <br>
-Tel: +34 628 11 12 41<br>
-Tel: +34 620 83 38 57<br>
 </p>
 <p>
-Síguenos en <a href='http://www.facebook.com/clubdelhorta'><img src="{{ "/assets/img/facebook.webp" | relative_url }}" />Facebook</a>
+Síguenos en <a href='http://www.facebook.com/clubdelhorta'><img src="{{ "/assets/img/facebook.webp" | relative_url }}" />Facebook</a> o <a href='https://www.instagram.com/elclubdelhorta/'>Instagram</a>
 </p>
 </div>
 
